--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,12 +6,6 @@ services:
       dockerfile: Dockerfile
     container_name: flask
     restart: unless-stopped
-    environment:
-      APP_ENV: "prod"
-      APP_DEBUG: "False"
-      APP_PORT: 5000
-    volumes:
-      - appdata:/var/www
     ports:
       - 5000:5000
     depends_on:
@@ -21,26 +15,17 @@ services:
 
   mongodb:
     image: mongo
-    restart: always
+    restart: unless-stopped
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: example
 
   db:
-    image: postgres:12-alpine
+    image: postgres
     restart: unless-stopped
     build:
       context: db
       dockerfile: Dockerfile
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_DB: test
       POSTGRES_PASSWORD: test
-    ports:
-      - 5432
 
-volumes:
-  mongodbdata:
-    driver: local
-  appdata:
-    driver: local
