--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
       dockerfile: Dockerfile
     container_name: flask
     restart: unless-stopped
+    volumes:
+      - appdata:/var/www
     ports:
       - 5000:5000
     depends_on:
@@ -19,6 +21,10 @@ services:
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: example
+      MONGODB_DATA_DIR: /data/db
+      MONDODB_LOG_DIR: /dev/null
+    volumes:
+      - mongodbdata:/data/db
 
   db:
     image: postgres
@@ -28,4 +34,14 @@ services:
       dockerfile: Dockerfile
     environment:
       POSTGRES_PASSWORD: test
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+
+volumes:
+  mongodbdata:
+    driver: local
+  appdata:
+    driver: local
+  pgdata:
+    driver: local
 
